Fixed TTS Clipping in Menue

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -21,6 +21,7 @@ div.title div{
   justify-content: space-between;
   text-align: center;
   align-self: flex-end;
+  max-width: available;
 }
 
 div.sub-menu {
